hphp/hack/test/typecheck/await_in_expressions10.php.exp
File "await_in_expressions10.php", line 4, characters 16-23:
await is only permitted as a statement, expression in a return statement or as a right hand side in top level assignment. (NastCheck[3034])
